<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvEvolution1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/evolution_1"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEvolution2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/evolution_2"
        android:textAlignment="center"
        android:textColor="@color/fire"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvolution1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="71dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="@+id/tvEvolution1"
        app:layout_constraintStart_toStartOf="@+id/tvEvolution1"
        app:layout_constraintTop_toBottomOf="@+id/tvEvolution1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="49dp"
        android:layout_height="71dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="@+id/tvEvolution1"
        app:layout_constraintStart_toStartOf="@+id/tvEvolution1"
        app:layout_constraintTop_toBottomOf="@+id/tvEvolution2" />

    <TextView
        android:id="@+id/tvEvolution3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/evolution_3"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEvolution2" />


</androidx.constraintlayout.widget.ConstraintLayout>